@@ -1,25 +1,0 @@
-;;; compat-24.el --- Obsolete package -*- lexical-binding: t; no-byte-compile: t; -*-
-
-;; Copyright (C) 2021-2023  Free Software Foundation, Inc.
-
-;; This program is free software; you can redistribute it and/or modify
-;; it under the terms of the GNU General Public License as published by
-;; the Free Software Foundation, either version 3 of the License, or
-;; (at your option) any later version.
-
-;; This program is distributed in the hope that it will be useful,
-;; but WITHOUT ANY WARRANTY; without even the implied warranty of
-;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;; GNU General Public License for more details.
-
-;; You should have received a copy of the GNU General Public License
-;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
-
-;;; Commentary:
-;;; Code:
-
-;; Use message instead of warn since it is less aggressive.
-(message "compat-24 has been deprecated")
-
-(provide 'compat-24)
-;;; compat-24.el ends here
